[package]
name = "voxel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anyhow = "1.0.68"
autodefault = "2.0.0"
bytemuck = { version = "1.13.0", features = ["derive"] }
env_logger = "0.10.0"
glam = "0.22.0"
once_cell = "1.17.0"
parking_lot = "0.12.1"
pollster = "0.2.5"
typed-builder = "0.12.0"
wgpu = "0.15.0"
winit = "0.27.5"
engine = { path = "../engine" }
lazy_static = "1.4.0"
